--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ nav{
     text-align: center;
     font-family: 'Zen Kurenaido', serif;
     font-size: 20px;
-    padding: 16px 16px;
+    padding: 16px 8px;
     text-decoration: none;
 }
 
@@ -73,7 +73,22 @@ body p{
     background:rgb(207, 209, 204);
     color:rgb(55, 58, 55);
     margin: 5px;
+    margin-bottom: 10%;
 }
+
+#current{ 
+    font-weight: bolder;
+    /* border: 2px dashed rgb(67, 71, 66);
+    border-radius: 3px; */
+}
+
+#current:after {
+    content: "}"
+  }
+  
+#current:before {
+    content: "{"
+  }
 
 /* home page text box */
 #selection{ 
@@ -115,7 +130,29 @@ body p{
 
 }
 
+/* Types of Tea page */
+.nine {
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: auto;
+    justify-content: center;
+    margin-bottom: 20%;
+  }
+
+.nine > img{ 
+    height: 1rem;
+    max-width: 100%;
+}
+
 /* resources page */
+h2{ 
+    color:rgb(55, 58, 55);
+    text-align: left;
+    text-decoration: underline;
+    font-size: 24px;
+    margin: 5px;
+}
+
 .contact {
     border-radius: 3px;
     background-color: rgb(207, 209, 204);
