--- a/css/style.css
+++ b/css/style.css
@@ -140,7 +140,7 @@ body p{
     grid-gap: 10px;
     grid-template-columns: auto;
     justify-content: center;
-    margin-bottom: 20%;
+    margin-bottom: 15%;
   }
 
 .nine > img{ 
@@ -199,6 +199,8 @@ h2{
     display:grid;
     grid-template-columns: auto auto;
     grid-template-rows: repeat(4, 1fr);
+    background: #a5a7a6;
+    margin-bottom: 10%;
 }
 
 .quiz img{ 
@@ -214,20 +216,33 @@ h2{
 }
 
 #ans{ 
-    
-    font-size: 100%;
+    display: hidden;
+    height: 100%;
+    width: 100%;
     justify-content: center;
     text-align: center;
     padding: 2%;
     padding-top: 0%;
-    background: none;
 }
 
-#ans:active {
-    
-    width: 70px;
-    height: 74px;
+#ans :active{ 
+    display: visible;
+    overflow: hidden;
+    animation:animate 1s linear forwards;
 }
+
+@keyframes animate {
+    0% {
+        font-size: 0%;
+    }
+    30% {
+        font-size: 75%;
+    }
+    80% {
+        font-size: 100%;
+    }
+}
+
 
 /* resources page */
 
