--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ a.skip{
     left: 0;
     padding: 6px;
     position: absolute;
-    top: -40px;
+    top: -100px;
     -webkit-transition: top 1s ease-out;
     transition: top 1s ease-out;
     z-index: 1;
@@ -36,9 +36,9 @@ nav{
 }
 
 #links{ 
-    display: inline-flex;
+    display: flex;
     margin: 0;
-    padding: 0;
+    padding: 2%;
     overflow: hidden;
     flex-flow: row wrap;
     justify-content: center;
@@ -50,6 +50,10 @@ nav{
     font-size: 20px;
     padding: 16px 8px;
     text-decoration: none;
+}
+
+#links a, #links a:link, #links a:visited, #links a:hover, #links a:focus, #links a:active{
+    color:rgb(24, 61, 15);
 }
 
 #links a:hover{
@@ -83,8 +87,6 @@ body p{
 
 #current{ 
     font-weight: bolder;
-    /* border: 2px dashed rgb(67, 71, 66);
-    border-radius: 3px; */
 }
 
 #current:after {
@@ -98,56 +100,125 @@ body p{
 /* home page text box */
 #selection{ 
     background: rgb(231, 235, 228);
+    position: relative;
     font-size: 1.5rem;
     padding: 5%;
     margin-top: 10%;
-    margin-bottom: 15%;
+    margin-bottom: 7%;
     text-align: center;
     font-weight: bolder;
     color:rgb(67, 71, 66);
-    border: 2px dashed #65837B;
+    background-clip: content-box;
 }
+
+.bord {
+    background: #1D1F20;
+    position: relative;
+    border-radius: 2px;
+  }
+
+.bord:after {
+    content: '';
+    position: absolute;
+    top: calc(-2px);
+    left: calc(-2px);
+    height: calc(100% + 4px);
+    width: calc(100% + 4px);
+    border-radius: calc(4px);
+    z-index: -1;
+    background: linear-gradient(60deg, #65837B, #2d413b, #b7ddcf, #323333, #a1a3a3, #3c685c, #9dc2b8, #3d3f3f);
+    background-size: 200% 200%;
+    animation: animatedgradient 5s ease alternate infinite;
+  }
+  
+
+
+  @keyframes animatedgradient {
+    0% {
+		background-position: 15% 25%;
+	}
+	50% {
+		background-position: 75% 50%;
+	}
+	100% {
+		background-position: 15% 25%;
+	}
+  }
 
 /* teacup images */
 
 .homecups{
-    display: grid;
-    margin-bottom: 15%;
-    grid-template-rows: auto auto auto;
-    justify-content: space-evenly; 
-    justify-items: center;
+    display: flex;
+    margin-bottom: 7%; 
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .homecups img { 
     height: 200px;
     width: 200px;
     max-width: 100%;
+    display:block;
+    margin:auto;
 }
 
-/* 
-.homecups img:hover{
-    border: 2px solid #2f3d39;;
-} */
-
-.subgr { 
-    display: grid;
-    grid-template-columns: subgrid;
-    margin-bottom: 5%;
+.homecups > p { 
+    font-size: 1.2rem;
+    overflow-wrap:normal;
 }
 
 /* Types of Tea page */
 .nine {
     display: grid;
-    grid-gap: 10px;
     grid-template-columns: auto;
+    row-gap: 10px;
     justify-content: center;
-    margin-bottom: 15%;
   }
 
-.nine > img{ 
-    height: 1rem;
-    max-width: 100%;
+.flipper-card {
+  max-width: 100%;;
+  height: 260px;
+  perspective: 800px;
+  }
+
+.flipper-body{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+}  
+
+.flipper-card:active .flipper-body,
+.flipper-card:hover .flipper-body,
+.flipper-card:active .flipper-body,
+.flipper-card:focus .flipper-body{
+    -webkit-transform: rotateY(180deg);
+    transform: rotateY(180deg);
+}  
+
+.flipper-card:focus-within .flipper-body{ 
+    transform: rotateY(180deg);
 }
+
+  .flipper-front,
+  .flipper-back {
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden; 
+  backface-visibility: hidden;
+  }
+  
+  .flipper-back {
+    position: relative;
+    font-size: 2.2rem;
+    bottom: 175px;
+    -webkit-transform: rotateY(180deg);
+    transform: rotateY(180deg);
+  }
+
 
 #info{ 
     background: none;
@@ -157,28 +228,7 @@ body p{
 }
 
 /* trivia page */
-/* #paral{ 
-  background-attachment: fixed;
-  background-position: center; 
-  background-size: cover; 
-  margin-top: 3%;
-  height: 10rem;
-  max-width: 100%;
-  grid-area: 1 / 1 / span 1 / -1;
-  background-image: url("file:///c:/Users/pooki/Documents/Portfolio/images/hightea.jpg");
-  background-repeat: no-repeat;
-}
 
-#paral > p{ 
-  color: white;
-  background:rgb(67, 71, 66, 0.75);
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -125%);
-  font-size: x-large;
-  white-space: nowrap;
-} */
 
 #paral > p{ 
     background:none;
@@ -189,7 +239,7 @@ body p{
 }
 
 #paral > h1{ 
-    font-size: 1.5rem;
+    font-size: 1.6rem;
     font-family: 'Zen Kurenaido', serif;
     color: rgb(67, 71, 66);
     text-align: center;
@@ -200,50 +250,60 @@ body p{
     display:grid;
     grid-template-columns: auto auto;
     grid-template-rows: repeat(4, 1fr);
-    background: #a5a7a6;
+    background: #cad4d1; 
     margin-bottom: 10%;
+    margin-top: 10%;
+    border: 2px dashed #65837B;
 }
 
 .quiz img{ 
     position: relative;
     text-align: center;
+    height: 150px;
 }
 
-#question{ 
+.quiz > div{ 
+    border-right: 1px solid #65837B;
+    border-bottom:  1px solid #65837B;
+}
+
+.ans { 
+    border-right: none;
+    border-bottom:  1px solid #65837B;
+}
+
+.question{ 
     text-align: center;
     font-weight: bold;
+    margin-top: 10%;
     top: 50%;
     left: 50%;
 }
 
-#ans{ 
-    display: hidden;
+.ans > p{ 
+    visibility: hidden;
+    font-size: 1.2rem;
+    background: none;
     height: 100%;
     width: 100%;
-    justify-content: center;
+    justify-content:baseline;
     text-align: center;
     padding: 2%;
-    padding-top: 0%;
+    padding-top: 5%;
 }
 
-#ans :active{ 
-    display: visible;
-    overflow: hidden;
-    animation:animate 1s linear forwards;
+button{
+  background-color: #1a441b; 
+  border: none;
+  color: white;
+  top: 100px;
+  padding: 15px 32px;
+  text-align: center;
+  display: inline-block;
+  margin-left: 25%;
+  margin-top: 12%;
+  font-size: 14px;
 }
-
-@keyframes animate {
-    0% {
-        font-size: 0%;
-    }
-    30% {
-        font-size: 75%;
-    }
-    80% {
-        font-size: 100%;
-    }
-}
-
 
 /* resources page */
 
@@ -288,10 +348,24 @@ body p{
     color:rgb(39, 117, 19);
 }
 
-#field{ 
-    max-width: 100%;
+.field{ 
+    width: 100%;
+    height: 15rem;
     border-radius:1rem;
+    background-image: url("file:///c:/Users/pooki/Documents/Portfolio/images/field.jpg");
+    background-size: cover;
 }
+
+.field > p{ 
+    text-align: center;
+    font-size: 2rem;
+    background: rgba(196, 193, 193, 0.5);
+    margin: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(0%, 175%);
+}
+
 
 /* form */
 .contact {
@@ -342,10 +416,146 @@ footer p{
 }
 
 /* tablet */
+@media screen and (min-width: 750px){
+    nav{ 
+        width: 100%;
+        overflow: auto;
+    }
+
+    nav > img{ 
+        width: 100%;
+    }
+    
+    #links a{ 
+        font-size: 36px;
+        width: 25%;
+        margin-right: 10px;
+        margin-left: 10px;
+    }
+
+    #main > p{ 
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+
+    h1, #homet, #seller, #paral > h1{ 
+        font-size: 3rem;
+    }
+
+    body{ 
+        font-size: 32px;
+    }
+
+    #selection{ 
+        font-size: 2.25rem;
+    }
+
+    .homecups{
+        flex-flow: row wrap;
+        flex-grow: 1;
+    }
+
+    .homecups p{ 
+        font-size: 2rem;
+        text-align: center;
+    }
+    
+    .homecups img { 
+        height: 300px;
+        width: 300px;
+        flex-grow:0;
+        flex-shrink:0;
+    }
+
+    #cup1, #cup2, #cup3 {
+        max-width: 350px;
+    }
+
+    .nine {
+        grid-template-columns: auto auto;
+        grid-template-rows: auto auto auto;
+      }
+    
+    .flipper-card {
+        height: 23rem;
+    }
+
+    .quiz img{ 
+        height: 20rem;
+        width: 100%;
+    }
+
+    button{
+        margin-left: 33%;
+        margin-top: 15%;
+        font-size: 28px;
+    }
+
+    .ans > p{ 
+        font-size: 2.5rem;
+        margin-top: 5%;
+    } 
+
+    #paral > p{ 
+        font-size: 2rem;
+    }
+
+    #seller{ 
+        margin: 5%;
+    }
+
+    .Sellers li {
+        font-size: 90%;
+    } 
+
+    .field{ 
+        height: 25rem;
+    }
+
+    .field > p{ 
+        font-size: 4rem;
+        transform: translate(0%, 150%);
+    }
+    
+    footer{ 
+        height: 2.8rem;
+    }
+
+}
 
 
 /* desktop */
-@media screen and (min-width: 850px){
+@media screen and (min-width: 1025px){
+
+    nav{ 
+        display: flex;
+    }
+
+    nav > img{ 
+        max-width: 40%;
+    }
+
+    #links a{ 
+        font-size: 36px;
+        margin-top: 15px;
+        margin-right: 45px;
+        margin-left: 45px;
+    }
+
+    #selection{ 
+        margin-bottom: 8%;
+        font-size: 2.5rem;
+    }
+
+    .homecups img { 
+        height: 320px;
+        width: 320px;
+    }
+
+    .homecups{
+        justify-content: space-evenly;
+    }
+
     .nine {
         display: grid;
         grid-gap: 10px;
@@ -355,4 +565,111 @@ footer p{
         margin-bottom: 20%;
       }
 
+    .nine > img{ 
+        height: 1rem;
+        max-width: 100%;
+    }
+
+    
+    .homecups img:hover{
+    border: 2px dashed rgb(67, 71, 66);
+    }
+
+    /* Trivia Page */
+    #paral > p{ 
+        margin-bottom: 0%;
+        font-size: 2.2rem;
+    }
+
+    .quiz{ 
+        margin-top: 5%;
+        justify-content: center;
+        margin-left: 40px;
+        margin-right: 40px;
+    }
+    
+    .quiz img{ 
+        height: 300px;
+    }
+    
+    .question > p{
+        font-size: 2rem;
+    }
+
+    .ans > p{ 
+        font-size: 2.5rem;
+        padding-top: 0%;
+        padding-bottom: 0%;
+        padding-right: 20%;
+        padding-left: 20%;
+    }
+    
+    button{
+      margin-left: 40%;
+      margin-top: 5%;
+      font-size: 36px;
+    }
+
+
+    /* Resource Page */
+    .Sellers li{
+        font-size: 110%;
+        text-align: center;
+    }
+
+    .field{ 
+        height: 30rem; 
+        background-attachment: fixed;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+
+    .field > p{ 
+        transform: translate(0%, 175%);
+    }
+
+    .contact {
+        border-radius: 5px;
+        margin-right: 80px;
+        margin-left: 80px;
+    }
+
+    h2{ 
+        font-size: 36px;
+    }
+
+    footer{ 
+        height: 3.2rem;
+    }
+    
+
 }
+
+@media screen and (prefers-reduced-motion: reduce){
+    /*Turn off scroll*/
+    html{
+        scroll-behavior: auto; 
+    }
+  
+    /*Turn off transition*/
+    .skip a{
+      -webkit-transition: initial; 
+      transition: initial; 
+    }
+
+    .flipper-body{
+        transition: none;
+    }  
+    
+    .field{ 
+        background-attachment: scroll;
+    }
+
+    /* turn off animation on home page */
+    .bord, .bord:after{ 
+        animation: none;
+    }
+
+
+  }
