--- a/css/style.css
+++ b/css/style.css
@@ -354,6 +354,7 @@ button{
     border-radius:1rem;
     background-image: url("file:///c:/Users/pooki/Documents/Portfolio/images/field.jpg");
     background-size: cover;
+    z-index: 1;
 }
 
 .field > p{ 
