--- a/css/style.css
+++ b/css/style.css
@@ -352,9 +352,12 @@ button{
     width: 100%;
     height: 15rem;
     border-radius:1rem;
-    background-image: url("https://github.com/almaxim/portfolio/tree/main/images/field.jpg");
-    background-size: cover;
-    z-index: 300;
+    background-image: url("file:///c:/Users/pooki/Documents/Portfolio/images/field.jpg");
+    background-attachment: fixed;
+    background-position: center; 
+    background-size: cover; 
+    color: white;
+    background-repeat: none;
 }
 
 .field > p{ 
