--- a/css/style.css
+++ b/css/style.css
@@ -352,7 +352,7 @@ button{
     width: 100%;
     height: 15rem;
     border-radius:1rem;
-    background-image: url("file:///c:/Users/pooki/Documents/Portfolio/images/field.jpg");
+    background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/0/06/Tea_fields_%28Will_Ellis%29.jpg/1200px-Tea_fields_%28Will_Ellis%29.jpg");
     background-attachment: fixed;
     background-position: center; 
     background-size: cover; 
